--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230124090847" rel="stylesheet">
- <link rel="stylesheet" href="css/style.min.css?_v=20230124090847">
+ <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230124153151" rel="stylesheet">
+ <link rel="stylesheet" href="css/style.min.css?_v=20230124153151">
  <title>Главная</title>
 </head>
 
@@ -26,7 +26,7 @@
           <h1>ИТС</h1>
           <h2>регионам</h2>
         </div>
-        <p class="date">23-24.03.2023</p>
+        <p class="date">23-24.03.<span>2023</span></p>
         <p class="place">Россия, г. Тюмень</p>
       </div>
       <div class="right-block">
@@ -66,16 +66,6 @@
             развитию автодорожной и транспортной инфраструктуры, обеспечит ее функциональность, безопасность, повысит
             эффективность
             и конкурентоспособность.</p>
-          <p>Конференция «ИТС регионам» призвана содействовать ускорению развития интеллектуальных транспортных систем в
-            рамках
-            национального проекта «Безопасные качественные дороги», развитию и реализации ключевых цифровых
-            инновационных
-            проектов и
-            технологий в субъектах Российской Федерации, объединив усилия бизнеса, потребителей и государства, что
-            приведет к
-            развитию автодорожной и транспортной инфраструктуры, обеспечит ее функциональность, безопасность, повысит
-            эффективность
-            и конкурентоспособность.</p>
         </div>
       </div>
     </div>
@@ -83,81 +73,85 @@
   </div>
 </section>
     <section class="themes">
- <div class="inner-wrapper">
-  <div class="themes__head">
-   <span>Ключевые темы конференции</span>
-   <a href="#">Скачать проект программы</a>
+  <div class="wrapper">
+    <div class="inner-wrapper">
+      <div class="themes__head">
+        <span>Ключевые темы конференции</span>
+        <a href="#">Скачать проект программы</a>
+      </div>
+      <div class="themes__box">
+        <div class="theme col-1">Цифровое развитие
+          транспортной
+          инфраструктуры
+          в регионах России</div>
+        <div class="theme col-2">Внедрение ИТС
+          в субъектах РФ
+          в рамках
+          нацпроекта БКД</div>
+        <div class="theme col-3">Технологии
+          обеспечения
+          безопасности
+          дорожного движения</div>
+        <div class="theme col-4">Безопасность
+          критической
+          информационной
+          инфраструктуры</div>
+        <div class="theme col-1">Технологии
+          информационного
+          моделирования</div>
+        <div class="theme col-2">Развитие
+          отечественных
+          технологий
+          в области ИТС</div>
+        <div class="theme col-3">Цифровизация
+          дорожного
+          хозяйства</div>
+        <div class="theme col-4">Кадровый
+          потенциал
+          отрасли ИТС</div>
+      </div>
+    </div>
   </div>
-  <div class="themes__box">
-   <div class="theme col-1">Цифровое развитие
-    транспортной
-    инфраструктуры
-    в регионах России</div>
-   <div class="theme col-2">Внедрение ИТС
-    в субъектах РФ
-    в рамках
-    нацпроекта БКД</div>
-   <div class="theme col-3">Технологии
-    обеспечения
-    безопасности
-    дорожного движения</div>
-   <div class="theme col-4">Безопасность
-    критической
-    информационной
-    инфраструктуры</div>
-   <div class="theme col-1">Технологии
-    информационного
-    моделирования</div>
-   <div class="theme col-2">Развитие
-    отечественных
-    технологий
-    в области ИТС</div>
-   <div class="theme col-3">Цифровизация
-    дорожного
-    хозяйства</div>
-   <div class="theme col-4">Кадровый
-    потенциал
-    отрасли ИТС</div>
-  </div>
- </div>
 </section>
     <section class="contacts">
- <div class="inner-wrapper">
-  <div class="download">
-   <a href="#">Скачать проект программы</a>
-  </div>
-  <div class="contacts__box">
-   <div class="contact">
-    <p>По вопросам участия
-     и партнерства:</p>
-    <span>Вадим Ишханов</span>
-    <div class="numbers">
-     <a href="tel:+79265506371">+79265506371;</a>
-     <a href="tel:+74957665165">+74957665165;</a>
-    </div>
-    <a href="mailto:v.ishkhanov@jcomm.ru">v.ishkhanov@jcomm.ru;</a>
-    <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+ <div class="wrapper">
+  <div class="inner-wrapper">
+   <div class="download">
+    <a href="#">Скачать проект программы</a>
    </div>
-   <div class="contact">
-    <p>По вопросам участия представителей субъектов РФ:</p>
-    <span>Анастасия Мова</span>
-    <div class="numbers">
-     <a href="tel:+79261331888">+79261331888;</a>
-     <a href="tel:+74957665165">+74957665165;</a>
+   <div class="contacts__box">
+    <div class="contact">
+     <p>По вопросам участия
+      и партнерства:</p>
+     <span>Вадим Ишханов</span>
+     <div class="numbers">
+      <a href="tel:+79265506371">+79265506371;</a>
+      <a href="tel:+74957665165">+74957665165;</a>
+     </div>
+     <a href="mailto:v.ishkhanov@jcomm.ru">v.ishkhanov@jcomm.ru;</a>
+     <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
     </div>
-    <a href="mailto:mova@jcomm.ru">mova@jcomm.ru;</a>
-    <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
-   </div>
-   <div class="contact">
-    <p>По вопросам
-     информационного сотрудничества:</p>
-    <span>Анастасия Рождественская</span>
-    <div class="numbers">
-     <a href="tel:+79265506371">+79265506371;</a>
-     <a href="tel:+74957665165">+74957665165;</a>
+    <div class="contact">
+     <p>По вопросам участия представителей субъектов РФ:</p>
+     <span>Анастасия Мова</span>
+     <div class="numbers">
+      <a href="tel:+79261331888">+79261331888;</a>
+      <a href="tel:+74957665165">+74957665165;</a>
+     </div>
+     <a href="mailto:mova@jcomm.ru">mova@jcomm.ru;</a>
+     <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
     </div>
-    <a href="mailto:ar@itsjournal.ru; ">ar@itsjournal.ru;</a>
-    <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+    <div class="contact">
+     <p>По вопросам
+      информационного сотрудничества:</p>
+     <span>Анастасия Рождественская</span>
+     <div class="numbers">
+      <a href="tel:+79265506371">+79265506371;</a>
+      <a href="tel:+74957665165">+74957665165;</a>
+     </div>
+     <a href="mailto:ar@itsjournal.ru; ">ar@itsjournal.ru;</a>
+     <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+    </div>
    </div>
   </div>
  </div>
@@ -203,7 +197,7 @@
   </div>
  </div>
 </footer>
-  <script src="js/app.js?_v=20230124090847"></script>
+  <script src="js/app.js?_v=20230124153151"></script>
 </body>
 
 </html>
