--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230124153151" rel="stylesheet">
- <link rel="stylesheet" href="css/style.min.css?_v=20230124153151">
+ <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230126103637" rel="stylesheet">
+ <link rel="stylesheet" href="css/style.min.css?_v=20230126103637">
  <title>Главная</title>
 </head>
 
@@ -123,34 +123,46 @@
     <div class="contact">
      <p>По вопросам участия
       и партнерства:</p>
-     <span>Вадим Ишханов</span>
-     <div class="numbers">
-      <a href="tel:+79265506371">+79265506371;</a>
-      <a href="tel:+74957665165">+74957665165;</a>
+     <div>
+      <span>Вадим Ишханов</span>
+      <div class="numbers">
+       <a href="tel:+79265506371">+79265506371;</a>
+       <a href="tel:+74957665165">+74957665165;</a>
+      </div>
      </div>
-     <a href="mailto:v.ishkhanov@jcomm.ru">v.ishkhanov@jcomm.ru;</a>
-     <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+     <div>
+      <a href="mailto:v.ishkhanov@jcomm.ru">v.ishkhanov@jcomm.ru;</a>
+      <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+     </div>
     </div>
     <div class="contact">
      <p>По вопросам участия представителей субъектов РФ:</p>
-     <span>Анастасия Мова</span>
-     <div class="numbers">
-      <a href="tel:+79261331888">+79261331888;</a>
-      <a href="tel:+74957665165">+74957665165;</a>
+     <div>
+      <span>Анастасия Мова</span>
+      <div class="numbers">
+       <a href="tel:+79261331888">+79261331888;</a>
+       <a href="tel:+74957665165">+74957665165;</a>
+      </div>
      </div>
-     <a href="mailto:mova@jcomm.ru">mova@jcomm.ru;</a>
-     <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+     <div>
+      <a href="mailto:mova@jcomm.ru">mova@jcomm.ru;</a>
+      <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+     </div>
     </div>
     <div class="contact">
      <p>По вопросам
       информационного сотрудничества:</p>
-     <span>Анастасия Рождественская</span>
-     <div class="numbers">
-      <a href="tel:+79265506371">+79265506371;</a>
-      <a href="tel:+74957665165">+74957665165;</a>
+     <div>
+      <span>Анастасия Рождественская</span>
+      <div class="numbers">
+       <a href="tel:+79265506371">+79265506371;</a>
+       <a href="tel:+74957665165">+74957665165;</a>
+      </div>
      </div>
-     <a href="mailto:ar@itsjournal.ru; ">ar@itsjournal.ru;</a>
-     <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+     <div>
+      <a href="mailto:ar@itsjournal.ru; ">ar@itsjournal.ru;</a>
+      <a href="mailto:info@itsrussiaforum.ru">info@itsrussiaforum.ru;</a>
+     </div>
     </div>
    </div>
   </div>
@@ -197,7 +209,7 @@
   </div>
  </div>
 </footer>
-  <script src="js/app.js?_v=20230124153151"></script>
+  <script src="js/app.js?_v=20230126103637"></script>
 </body>
 
 </html>
