change some styles for archive

--- a/src/html/archive.html
+++ b/src/html/archive.html
@@ -8,7 +8,7 @@
     </div>
     <div class="archive__container">
       <div class="archive__box">
-        <a href="/index.html" class="archive__item">ИТС 2023</a>
+        <a href="/index.html" class="archive__item archive__item_active">ИТС 2023</a>
         <a href="" class="archive__item">ИТС 2023: Тюмень</a>
       </div>
       <div class="archive__box">
