--- a/archive.html
+++ b/archive.html
@@ -6,9 +6,9 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230704193823" rel="stylesheet">
- <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
- <link rel="stylesheet" href="css/style.min.css?_v=20230704193823">
+ <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230710154111" rel="stylesheet">
+ <link rel="shortcut icon" href="img/favicon/favicon-32x32.png" type="image/x-icon">
+ <link rel="stylesheet" href="css/style.min.css?_v=20230710154111">
  <title>Архив</title>
 </head>
 
@@ -23,36 +23,6 @@
       <a href="#" class="archive__era"><img src="img/era-1.png" alt=""></a>
     </div>
     <div class="archive__container">
-      <div class="archive__box">
-        <a href="/index.html" class="archive__item archive__item_active">ИТС 2023</a>
-        <a href="" class="archive__item">ИТС 2023: Тюмень</a>
-      </div>
-      <div class="archive__box">
-        <a href="l" class="archive__item">ИТС 2022</a>
-        <a href="" class="archive__item">ИТС 2022: Пятигорск</a>
-      </div>
-      <div class="archive__box">
-        <a href="" class="archive__item">ИТС 2021</a>
-        <a href="" class="archive__item">ИТС 2021: Калуга</a>
-      </div>
-      <div class="archive__box">
-        <a href="" class="archive__item">ИТС 2020</a>
-      </div>
-      <div class="archive__box">
-        <a href="" class="archive__item">ИТС 2019</a>
-        <a href="" class="archive__item">ИТС 2019: Ульяновск</a>
-      </div>
-      <div class="archive__box">
-        <a href="" class="archive__item">ИТС 2018</a>
-        <a href="" class="archive__item">ИТС 2018: Рязань</a>
-      </div>
-      <div class="archive__box">
-        <a href="" class="archive__item">ИТС 2017</a>
-        <a href="" class="archive__item">ИТС 2017: Орел</a>
-      </div>
-      <div class="archive__box">
-        <a href="" class="archive__item">ИТС 2016</a>
-      </div>
     </div>
   </div>
 </div>
@@ -74,5 +44,5 @@
   </div>
 </footer>
 </body>
-
+<script src="./js/archive.js?_v=20230710154111"></script>
 </html>
