--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230704193823" rel="stylesheet">
- <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
- <link rel="stylesheet" href="css/style.min.css?_v=20230704193823">
+ <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230710154111" rel="stylesheet">
+ <link rel="shortcut icon" href="img/favicon/favicon-32x32.png" type="image/x-icon">
+ <link rel="stylesheet" href="css/style.min.css?_v=20230710154111">
  <title>Главная</title>
 </head>
 
@@ -178,28 +178,28 @@
   <div class="wrapper">
     <div class="partners__container">
       <a href="#" class="partners__box">
-        <span class="partner-position">При поддержке и участии</span>
-        <img src="img/MIN.png" alt="">
+        <span class="partners__position">При поддержке и участии</span>
+        <img class="partners__img" src="img/MIN.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">При поддержке и участии</span>
-        <img src="img/ROSAUTODOR.png" alt="">
+        <span class="partners__position">При поддержке и участии</span>
+        <img class="partners__img" src="img/ROSAUTODOR.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">Организатор</span>
-        <img src="img/ERA.png" alt="">
+        <span class="partners__position">Организатор</span>
+        <img class="partners__img" src="img/ERA.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">Партнер</span>
-        <img src="img/GLONNAS.png" alt="">
+        <span class="partners__position">Партнер</span>
+        <img class="partners__img" src="img/GLONNAS.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">Стратегический информационный партнер</span>
-        <img src="img/ITS.png" alt="">
+        <span class="partners__position">Стратегический информационный партнер</span>
+        <img class="partners__img" src="img/ITS.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">Оператор</span>
-        <img src="img/JCOMM.png" alt="">
+        <span class="partners__position">Оператор</span>
+        <img class="partners__img" src="img/JCOMM.png" alt="">
       </a>
     </div>
   </div>
