--- a/src/html/head.html
+++ b/src/html/head.html
@@ -5,7 +5,7 @@
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
- <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+ <link rel="shortcut icon" href="@img/favicon/favicon-32x32.png" type="image/x-icon">
  <link rel="stylesheet" href="css/style.min.css">
  <title>@@title</title>
 </head>
