--- a/src/html/partners.html
+++ b/src/html/partners.html
@@ -2,28 +2,28 @@
   <div class="wrapper">
     <div class="partners__container">
       <a href="#" class="partners__box">
-        <span class="partner-position">При поддержке и участии</span>
-        <img src="@img/MIN.png" alt="">
+        <span class="partners__position">При поддержке и участии</span>
+        <img class="partners__img" src="@img/MIN.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">При поддержке и участии</span>
-        <img src="@img/ROSAUTODOR.png" alt="">
+        <span class="partners__position">При поддержке и участии</span>
+        <img class="partners__img" src="@img/ROSAUTODOR.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">Организатор</span>
-        <img src="@img/ERA.png" alt="">
+        <span class="partners__position">Организатор</span>
+        <img class="partners__img" src="@img/ERA.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">Партнер</span>
-        <img src="@img/GLONNAS.png" alt="">
+        <span class="partners__position">Партнер</span>
+        <img class="partners__img" src="@img/GLONNAS.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">Стратегический информационный партнер</span>
-        <img src="@img/ITS.png" alt="">
+        <span class="partners__position">Стратегический информационный партнер</span>
+        <img class="partners__img" src="@img/ITS.png" alt="">
       </a>
       <a href="#" class="partners__box">
-        <span class="partner-position">Оператор</span>
-        <img src="@img/JCOMM.png" alt="">
+        <span class="partners__position">Оператор</span>
+        <img class="partners__img" src="@img/JCOMM.png" alt="">
       </a>
     </div>
   </div>
