fixed contacts offset

--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -36,7 +36,7 @@
     </div>
     <div class="contact">
      <p class="contact-question">По вопросам
-      информационного&nbsp;сотрудничества:</p>
+      информационного сотрудничества:</p>
      <div>
       <span class="contact-person">Анастасия Рождественская</span>
       <div class="numbers">
