--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230710154111" rel="stylesheet">
+ <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap&_v=20230710175651" rel="stylesheet">
  <link rel="shortcut icon" href="img/favicon/favicon-32x32.png" type="image/x-icon">
- <link rel="stylesheet" href="css/style.min.css?_v=20230710154111">
+ <link rel="stylesheet" href="css/style.min.css?_v=20230710175651">
  <title>Главная</title>
 </head>
 
@@ -150,7 +150,7 @@
     </div>
     <div class="contact">
      <p class="contact-question">По вопросам
-      информационного&nbsp;сотрудничества:</p>
+      информационного сотрудничества:</p>
      <div>
       <span class="contact-person">Анастасия Рождественская</span>
       <div class="numbers">
