--- a/archive.html
+++ b/archive.html
@@ -44,5 +44,5 @@
   </div>
 </footer>
 </body>
-<script src="./js/archive-new.js?_v=20230711094342"></script>
+<script src="./js/archive.js"></script>
 </html>
